Galene 0.97 (unreleased)

  * Upgrade to Pion v4.
  * Add support for ETags and ICE restarts to the WHIP server.
  * Implement UDP multiplexing.
  * Implement hierarchical tokens.
  * Add rotate filter; this is useful when using a mobile phone that is
    upside down as a webcam.
  * Implement /sharescreen, rename /stopshare to /unsharescreen.
  * Make the TURN server less verbose.
  * Replace the configuration field "publicServer" with "allowOrigin" and
    "allowAdminOrigin".  This is an incompatible change.
  * Fix a race condtion in the setdata request.  Thanks to git-lui.

8 March 2025: Galene 0.96.3

  * Change username validation to validate the effectively used username,
    which is not necessarily the same as the one typed by the user.
    Thanks to K900.
  * Allow empty usernames again, they were mistakenly disallowed in 0.96.1.
  * Reverted a change that caused the chat button to disappear on mobile.

21 January 2025: Galene 0.96.2

  * Fix a bug, introduced in 0.96.1, that could cause plaintext passwords
    to be erroneously accepted even when incorrect.
  * Implement background blur on Safari.
  * Set the minimum TLS version to 1.2.
  * Change the default hashing algorithm to bcrypt.  We use a cost of 8 in
    order to keep hashing times under 25ms, even though 10 is currently
    the recommended minimum.
  * Limit the number of concurrent password hashing operations to the
    number of CPUs.  This avoids using excessive memory when many users
    log in at the same time.

18 January 2025: Galene 0.96.1

  * Avoid path traversal in disk writer.
  * Forbid backslashes in group names on all systesm (we used to only
    forbid them on Windows).  This is an incompatible change.
  * Minor restrictions on usernames: forbid usernames starting with
    a slash, forbid usernames containing the string "/.", and forbid
    backslashes.  This is an incompatible change.
  * Ensure cleartext passwords are veryfied in constant time.