@@ -7,6 +7,7 @@ Galene 0.97 (unreleased)
   * Add rotate filter; this is useful when using a mobile phone that is
     upside down as a webcam.
   * Implement /sharescreen, rename /stopshare to /unsharescreen.
+  * Implement JSON templates in galenectl.
   * Make the TURN server less verbose.
   * Replace the configuration field "publicServer" with "allowOrigin" and
     "allowAdminOrigin".  This is an incompatible change.
